--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "GATSBY_GRAPHQL_IDE=playground gatsby develop",
     "format": "prettier --write src/**/*.js",
     "lint": "echo \"Error: no linter specified\" && exit 0",
     "serve": "gatsby serve",
@@ -31,7 +31,7 @@
     "gatsby-plugin-offline": "^2.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
-    "gatsby-source-shopify": "^2.0.30",
+    "gatsby-source-strapi": "denisgoryaynov/gatsby-source-strapi#build",
     "gatsby-transformer-sharp": "^2.1.19",
     "gatsby": "^2.5.0",
     "react-apollo": "^2.5.5",
