order with address bug

--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-source-strapi": "denisgoryaynov/gatsby-source-strapi#build",
     "gatsby-transformer-sharp": "^2.1.19",
+    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
+    "react-distpicker": "^1.0.2",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
