--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,6 @@
 STRAPI_API=http://localhost:1337
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
+ALGOLIA_APP_ID=E2NW58E8YJ
+ALGOLIA_API_KEY=77258aa4e37225f5a752523042a065ba
+ALGOLIA_INDEX_NAME=products
