--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@emotion/core": "^10.0.17",
     "@emotion/styled": "^10.0.17",
     "@smooth-ui/core-em": "^11.1.1",
+    "algoliasearch": "^3.35.1",
     "apollo-boost": "^0.3.1",
     "axios": "^0.18.0",
     "emotion-theming": "^10.0.19",
     "gatsby": "^2.5.0",
     "gatsby-image": "^2.0.41",
+    "gatsby-plugin-algolia": "^0.3.4",
     "gatsby-plugin-emotion": "^4.0.6",
     "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-layout": "^1.0.15",
@@ -43,6 +45,8 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
+    "react-instantsearch-dom": "^6.0.0",
+    "react-modal": "^3.11.1",
     "react-onclickoutside": "^6.8.0",
     "react-router-dom": "^5.0.0",
     "reakit": "^1.0.0-beta.8",
