pay return page ready

--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,8 @@
-STRAPI_API=http://localhost:1337
+HOST=http://test.smallsticker.com
+STRAPI_API=http://backend.smallsticker.com:1337
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
 ALGOLIA_APP_ID=E2NW58E8YJ
 ALGOLIA_API_KEY=77258aa4e37225f5a752523042a065ba
-ALGOLIA_INDEX_NAME=products
+ALGOLIA_SEARCH_API_KEY=d31580cad0de9c8666aadb9d679ea321
+ALGOLIA_INDEX_NAME=Products
