--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
-STRAPI_API=http://10.0.1.9:1337
+HOST=http://test.smallsticker.com
+STRAPI_API=http://backend.smallsticker.com:1337
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
 ALGOLIA_APP_ID=E2NW58E8YJ
