fix page content

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-HOST=http://localhost:8000
-STRAPI_API=http://localhost:1337
+HOST=http://test.smallsticker.com
+STRAPI_API=http://backend.smallsticker.com:1337
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
 ALGOLIA_APP_ID=E2NW58E8YJ
