--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 HOST=http://test.smallsticker.com
-STRAPI_API=http://backend.smallsticker.com:1337
+STRAPI_API=http://backend.smallsticker.com
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
 ALGOLIA_APP_ID=E2NW58E8YJ
