--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-HOST=http://test.smallsticker.com
-STRAPI_API=http://backend.smallsticker.com
+HOST=https://test.smallsticker.com
+STRAPI_API=https://backend.smallsticker.com
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
 ALGOLIA_APP_ID=E2NW58E8YJ
