add google analytics

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gatsby Store",
-  "short_name": "Store",
+  "name": "小贴画",
+  "short_name": "小贴画",
   "start_url": ".",
   "icons": [
     {
