empty cart tips

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-HOST=https://test.smallsticker.com
+HOST=https://smallsticker.com
 STRAPI_API=https://backend.smallsticker.com
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
