add cosignee field to order form

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 HOST=https://smallsticker.com
-STRAPI_API=https://backend.smallsticker.com
+STRAPI_API=http://localhost:1337
 IDENTIFIER=wuzhenyu
 PASSWORD=dmjtag174832
 ALGOLIA_APP_ID=E2NW58E8YJ
